# xxplain

./: .dockerignore  .gitignore  Cравнительная таблица метрик.md  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
backend/: analyze.py  config.py  main.py  models.py  optimize.py  pg.py  predict.py  recommend.py  services.py
benchmarks/toast/: schema.sql
benchmarks/tpc-h/: schema.sql
docker/app/: Dockerfile
docker/caddy/: Caddyfile
docker/postgres/: postgresql.conf
frontend/: QueryStatsTable.vue  SqlCard.vue  index.html
lab/: build_datasets.py  linreg_model.py  plan.json  plan_analyze.json  predict_model.py  test.csv
ml/: __init__.py  features.py  loader.py
ml/evaluation/: __init__.py  evaluator.py  metrics.py
ml/experiments/: __init__.py  dataset.py  experiment.py  trainer.py
ml/features/: __init__.py  config.py  extractor.py
ml/models/: __init__.py  loader.py  manager.py  registry.py
models/: gradientboosting_model.pkl  lasso_model.pkl  linear_model.pkl  metadata.json  ridge_model.pkl  scaler.pkl
scripts/: a_collect_sql_plans.py  api_usage.py  b_enrich_dataset.py  benchdata.py  build_datasets.py  c_train_models.py  collect_sql_plans.py  gendata.sh  gentoast.py  optimize.py  pg_stat_statements_to_dataset.py  test_optimized.py  train_models.py
size_models/: catboost_model.pkl  gradientboosting_model.pkl  lasso_model.pkl  metadata.json  ridge_model.pkl  xgboost_model.pkl
time_models/: catboost_model.pkl  gradientboosting_model.pkl  lasso_model.pkl  metadata.json  ridge_model.pkl  scaler.pkl  xgboost_model.pkl
(+12 files in other folders)
