[project]
name = "xxplane"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.10.1",
    # Database
    "psycopg[binary]>=3.2.9",
    # ML and data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    # Logging and monitoring
    "structlog>=25.4.0",
    "openai>=1.105.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
    "dotenv>=0.9.9",
    "lightgbm>=4.6.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "tpchgen-cli>=2.0.0",
    "requests>=2.32.5",
]
